float Issue is fixed! 'pseudo element, clearfix, overflow: hidden'

--- a/CSS/Float/styles.css
+++ b/CSS/Float/styles.css
@@ -14,6 +14,28 @@ body {
   width: 400px;
   text-align: center;
   /* background-color: #000; */
+
+  /* float 문제 해결 방법 1) */
+  /* 집 나간 자식요소 잡아온다! */
+  /* overflow: hidden; */
+}
+
+/* clearfix with pseudo element */
+/* clearfix만 단독으로 쓰면 굳이 html에 쓸 데 없는 block을 생성해줘야함
+html에는 존재하지 않지만 비슷한 역할을 해주는 css 기능 Pseudo Element를 이용하자 
+*/
+
+/* .float_parent 요소 앞에가 아닌 뒤에가 레이아웃이 무너졌기 때문에 after만 사용 */
+/* .float_parent::before {
+  content: "";
+  display: block;
+  clear: left;
+} */
+
+.float_parent::after {
+  content: "";
+  display: block; /* ====> block 요소에만 사용 가능하니까 block으로 만들어 놓기 */
+  clear: left;
 }
 
 .float-child-1 {
